Color Balance Adjustment Layer "escapes" its mask when parameters are extreme #75414

Closed
opened 2020-04-05 18:06:41 +02:00 by Andi McClure · 7 comments

System Information
Operating system: Mac OS X 10.13.6 (17G10021)
Graphics card: Intel Iris Graphics 6100
Blender Version
Broken: First encountered in 2.82, also tested in "Version 2.82a (2.82a 2020-03-12)", also tested in a nightly, the download page called it "Blender 2.83 Alpha, April 04, 23:21:36 - 505a19ed75, macOS 64 bit, 193.81MB". Bug reproduced the same in all 3.

Short description of error

I have a Color Balance Adjustment Layer on my video. The adjustment layer has a Mask confining it to a small rectangle in the center. However if I turn the amount of color balance up to be "too extreme", the adjustment escapes the mask. Most of the image is unaffected when this happens, but a narrow range of colors in the entire image (including outside the mask) is affected by the extreme color balance. It looks as if a "magic wand" tool were applied.

Reproduce using example file

Download and run this example file. It should have a single frozen image packed into the file, some text captions, and then about 27 seconds in an adjustment layer is added masked to a small rectangle in the center of the screen.

defaults2-bugreport.blend

Open this and start playing. You will see the effect about 27 seconds in and it will look like this:

defaults2-bugreport-singleframe.png

The rectangle in the center which is bright black and green is exactly as expected. The purple bleeding all over the rest of the screen is a bug.

My EXPECTED BEHAVIOR is when a mask is applied to a color adjustment, the image outside the mask does not change.

AN INTERESTING OBSERVATION: If you click Adjustment 1, then look in the Modifiers tab, then scroll down to Gamma, if you change the Gamma you will find that as you drag it around the bug changes in interesting ways. The bug does not express at all if the Gamma is at anything less than maximum intensity. If you change the hue of the gamma, the purple areas flicker and change to cyan or other colors.

My original steps to reproduce

I made a video file based on File->New->Video Editing and imported audio and video. I applied an Adjustment Layer to the video in my file. There were some dim LED lights visible in the video and I wanted them to pop, so I added a Color Balance adjustment layer to ramp the contrast up as far as it goes. However this made other objects in the scene appear weird, so I limited the adjustment layer to a mask using the instructions in this video https://youtu.be/qCSmjabIr78?t=1478 : I Render Imaged one frame, drew the rectangle I wanted, gave that rectangle a mask name, then applied the mask by name back in the Color Balance Adjustment Layer pane. I immediately found that this was breaking colors outside the mask, turning parts of my hand purple.

Afterward I discovered that I could replace the Color Balance adjustment layer with a Curves adjustment layer and I did NOT reproduce the problem using Curves. So I am not blocked on this bug (because in my real project I am using curves now), but it is a bug.

The example file is a copy of my WIP video file but I took out the video and audio and replaced it with a still image so it would be easier to download.

**System Information** Operating system: Mac OS X 10.13.6 (17G10021) Graphics card: Intel Iris Graphics 6100 **Blender Version** Broken: First encountered in 2.82, also tested in "Version 2.82a (2.82a 2020-03-12)", also tested in a nightly, the download page called it "Blender 2.83 Alpha, April 04, 23:21:36 - 505a19ed75b2, macOS 64 bit, 193.81MB". Bug reproduced the same in all 3. **Short description of error** I have a Color Balance Adjustment Layer on my video. The adjustment layer has a Mask confining it to a small rectangle in the center. However if I turn the amount of color balance up to be "too extreme", the adjustment escapes the mask. Most of the image is unaffected when this happens, but a narrow range of colors in the entire image (including outside the mask) *is* affected by the extreme color balance. It looks as if a "magic wand" tool were applied. **Reproduce using example file** Download and run this example file. It should have a single frozen image packed into the file, some text captions, and then about 27 seconds in an adjustment layer is added masked to a small rectangle in the center of the screen. [defaults2-bugreport.blend](https://archive.blender.org/developer/F8450633/defaults2-bugreport.blend) Open this and start playing. You will see the effect about 27 seconds in and it will look like this: ![defaults2-bugreport-singleframe.png](https://archive.blender.org/developer/F8450634/defaults2-bugreport-singleframe.png) The rectangle in the center which is bright black and green is exactly as expected. The purple bleeding all over the rest of the screen is a bug. My EXPECTED BEHAVIOR is when a mask is applied to a color adjustment, the image outside the mask does not change. AN INTERESTING OBSERVATION: If you click Adjustment 1, then look in the Modifiers tab, then scroll down to Gamma, if you change the Gamma you will find that as you drag it around the bug changes in interesting ways. The bug does not express at all if the Gamma is at anything less than maximum intensity. If you change the hue of the gamma, the purple areas flicker and change to cyan or other colors. **My original steps to reproduce** I made a video file based on File->New->Video Editing and imported audio and video. I applied an Adjustment Layer to the video in my file. There were some dim LED lights visible in the video and I wanted them to pop, so I added a Color Balance adjustment layer to ramp the contrast up as far as it goes. However this made other objects in the scene appear weird, so I limited the adjustment layer to a mask using the instructions in this video https://youtu.be/qCSmjabIr78?t=1478 : I Render Imaged one frame, drew the rectangle I wanted, gave that rectangle a mask name, then applied the mask by name back in the Color Balance Adjustment Layer pane. I immediately found that this was breaking colors outside the mask, turning parts of my hand purple. Afterward I discovered that I could replace the Color Balance adjustment layer with a Curves adjustment layer and I did NOT reproduce the problem using Curves. So I am not blocked on this bug (because in my real project I am using curves now), but it is a bug. The example file is a copy of my WIP video file but I took out the video and audio and replaced it with a still image so it would be easier to download.
Author

Added subscriber: @mcc111

Added subscriber: @mcc111

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscribers: @iss, @Sergey

Added subscribers: @iss, @Sergey
Richard Antalik was assigned by Sergey Sharybin 2020-06-12 13:27:53 +02:00

@iss, since you've got patch, considering you've picked up the task to work on.

P.S. See the feedback in the patch, it should be simple to finalize it and commit! :)

@iss, since you've got patch, considering you've picked up the task to work on. P.S. See the feedback in the patch, it should be simple to finalize it and commit! :)

This issue was referenced by 5f01048dcb

This issue was referenced by 5f01048dcb9a146f2ffc6273f18c5d0553b3f6f1

This issue was referenced by 229ed078d1

This issue was referenced by 229ed078d1d0de27e8bc7d4665e560069463b7f8

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 2.90 milestone 2023-02-08 16:27:21 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#75414
No description provided.